[gd_scene load_steps=3 format=3 uid="uid://bw478kcw8ubkt"]

[ext_resource type="Script" path="res://scripts/CombatLoop/GamePieceShell.gd" id="1_vm76q"]
[ext_resource type="Texture2D" uid="uid://chpiqvpgi8rbh" path="res://textures/icon.svg" id="2_1o66a"]

[node name="GamePieceShell" type="Node2D"]
script = ExtResource("1_vm76q")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_1o66a")

[node name="targetButton" type="Button" parent="."]
offset_left = -64.0
offset_top = -62.0
offset_right = 64.0
offset_bottom = 66.0
text = "hey"

[node name="NameAndLevel" type="Label" parent="."]
offset_left = -93.0
offset_top = -79.0
offset_right = 91.0
offset_bottom = -56.0
horizontal_alignment = 1

[node name="hp" type="Label" parent="."]
offset_left = -91.0
offset_top = 60.0
offset_right = 93.0
offset_bottom = 83.0
horizontal_alignment = 1

[connection signal="pressed" from="targetButton" to="." method="_on_target_button_pressed"]
